@@ -4,8 +4,8 @@ $def with (title, active_tab="NONE")
     <title>Deluge:$title</title>
     <link rel="icon" href="$base/static/images/deluge_icon.gif" type="image/gif" />
     <link rel="shortcut icon" href="$base/static/images/deluge_icon.gif" type="image/gif" />
-<link rel="stylesheet" type="text/css" href="$base/static/simple_site_style.css" />
-
+    <script language="javascript" src="$base/static/deluge.js"></script>
+    <link rel="stylesheet" type="text/css" href="$base/static/simple_site_style.css" />
 </head>
 
 <body>
