@@ -53,10 +53,20 @@ $for torrent in torrent_list:
 
 
 <div class="panel">
+<table><tr><td>
 $:render.part_button('GET', '/torrent/add', _('Add torrent'), 'tango/list-add.png')
 $:render.part_button('POST', '/pause_all', _('Pause all'), 'tango/pause.png')
 $:render.part_button('POST', '/resume_all', _('Resume all'), 'tango/start.png')
 <!--$:render.part_button('POST', '/logout', _('Logout'), 'tango/system-log-out.png')-->
+</td>
+<td>
+$if is_auto_refreshed:
+    <div style="width:120px;height:20px;overflow:hidden;align:left;text-align:left;padding-left:20px;">
+    $:render.part_auto_refresh()
+    </div>
+</td>
+</tr></table>
+
 </div>
 
 $:part_stats()
