@@ -1,22 +1,6 @@
 $def with (stats)
 
 
-<div class="panel"  id='refresh_panel'>
-
-$_('Auto refresh:')
-$if getcookie('auto_refresh') == '1':
-    ($getcookie('auto_refresh_secs')) $_('seconds') &nbsp;
-    $:render.part_button('GET', '/refresh/set', _('Set'), 'tango/preferences-system.png')
-    $:render.part_button('POST', '/refresh/off', _('Disable'), 'tango/process-stop.png')
-$else:
-    $_('Off') &nbsp;
-    $:render.part_button('POST', '/refresh/on', _('Enable'), 'tango/view-refresh.png')
-$#end
-
-$:render.part_button('POST', '/logout', _('Logout'), 'tango/system-log-out.png')
-
-</div>
-
 <div class="panel"  id='stats_panel'>
 
     $_('Connections') : $stats.num_connections ($stats.max_num_connections)
@@ -27,6 +11,7 @@ $:render.part_button('POST', '/logout', _('Logout'), 'tango/system-log-out.png')
 
     $:render.part_button('GET', '/config/', _('Settings'), 'tango/preferences-system.png')
 
+    $:render.part_button('POST', '/logout', _('Logout'), 'tango/system-log-out.png')
 </div>
 
 
